--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.mochoi.pomer.MainActivity"
+            android:name="com.mochoi.pomer.view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,8 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mochoi.pomer.TodoListActivity" />
-        <activity android:name="com.mochoi.pomer.RegisterTaskActivity" />
+        <activity android:name="com.mochoi.pomer.view.TodoListActivity" />
+        <activity android:name="com.mochoi.pomer.view.RegisterTaskActivity" />
     </application>
 
 </manifest>
