--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'io.realm:android-adapters:2.1.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'org.apache.commons:commons-lang3:3.0'
     apply plugin: 'realm-android'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
