--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,12 @@ dependencies {
     implementation 'io.realm:android-adapters:2.1.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.apache.commons:commons-lang3:3.0'
+    implementation 'com.google.dagger:dagger:2.11'
+    implementation "com.google.dagger:dagger-android-support:2.11"
     apply plugin: 'realm-android'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 }
