--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:2.19"
     apply plugin: 'realm-android'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.8.9'
+    testImplementation 'org.mockito:mockito-core:2.8.9' //powermockにmockitoのバージョンを合わせている
     testImplementation 'org.powermock:powermock-module-junit4:1.7.1'
     testImplementation 'org.powermock:powermock-api-mockito2:1.7.1'
     testImplementation 'io.reactivex.rxjava2:rxjava:2.1.13'
