--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             />
         <activity android:name=".view.PastActivity"
             android:screenOrientation="portrait"/>
-
+        <activity android:name=".view.SettingActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
