--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.0'
     implementation 'com.google.dagger:dagger:2.19'
     implementation "com.google.dagger:dagger-android-support:2.19"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     apply plugin: 'realm-android'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.8.9' //powermockにmockitoのバージョンを合わせている
