--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.mochoi.pomer.view.MainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,20 +24,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mochoi.pomer.view.TodoListActivity"
+        <activity android:name=".view.TodoListActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name="com.mochoi.pomer.view.RegisterEditTaskActivity"
+        <activity android:name=".view.RegisterEditTaskActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name="com.mochoi.pomer.view.BacklogActivity"
+        <activity android:name=".view.BacklogActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".view.TimerActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait"/>
         <activity android:name=".view.PastActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".view.SettingActivity"
             android:screenOrientation="portrait"/>
-
+        <activity android:name=".view.ReportActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
